# polls

./: README.md  db.sqlite3
django-polls/: MANIFEST.in  pyproject.toml
django-polls/django_polls/: README.rst  admin.py  apps.py  models.py  tests.py  urls.py  views.py
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
django-polls/django_polls/migrations/: 0001_initial.py
django-polls/django_polls/static/polls/: style.css
django-polls/django_polls/templates/polls/: detail.html  index.html  results.html
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/admin/: base_site.html
polls/templates/polls/: detail.html  index.html
